[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradexv2"
version = "0.1.0"
description = "Python-based, broker-agnostic algorithmic trading framework for Indian exchanges"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "dhanhq>=2.0",
    "pyotp>=2.9",
    "PyJWT>=2.8",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-requests>=0.43b0",
    "duckdb>=1.0.0",
    "click>=8.1",
    "curl_cffi>=0.14.0",
    "cachetools>=7.1.4",
    "pyarrow>=25.0.0",
]

[project.scripts]
# DEPRECATED: use ``tradex broker`` instead.  Kept for backward compat;
# will be removed in v0.2.
broker = "brokers.cli.broker:broker"
tradex = "tradex.cli:tradex"
datalake-mcp = "datalake.mcp.server:run_server"

[project.optional-dependencies]
tui = [
    "textual>=0.40",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "import-linter>=2.0",
    "hypothesis>=6.100",
    "mutmut>=3.0",
]

[project.entry-points."tradex.brokers"]
# Module-only targets (no ":ClassName" suffix) deliberately -- each broker
# package already self-registers via register_broker_plugin() etc. at
# import time (brokers/{dhan,upstox,paper}/__init__.py), so the entry
# point's job is just "import this module," not "load this specific
# class." The originally-drafted values here (brokers.dhan:DhanBroker,
# brokers.paper:PaperBroker) referenced classes that were never built --
# only brokers.upstox.broker.UpstoxBroker exists. Corrected to real,
# existing targets. See runtime/broker_discovery.py for the composition-
# root code that consumes this group via importlib.metadata.entry_points().
dhan = "brokers.dhan"
upstox = "brokers.upstox"
paper = "brokers.paper"

[project.entry-points."tradex.exchanges"]
# Exchange plugins: each module must expose ADAPTER (ExchangeAdapter instance)
# and CALENDAR (TradingCalendar instance). See datalake/exchange_registry.py
# for the composition-root discovery code.
nse = "plugins.exchanges.nse"

# Single-root packaging: all library code lives under src/.
# Layout (Clean Architecture):
#   src/domain, application, infrastructure, brokers,
#   interface/{api,ui}, analytics, datalake, config, runtime, tradex
# Run/tests: PYTHONPATH=src  (or editable install: pip install -e .)
# Note: `runtime` is the composition root package (wires application layers);
# it contains only Python source — artefacts (locks, logs, tokens) live in
# the repo-root runtime/ directory which is NOT distributed.
[tool.setuptools.packages.find]
where = ["src"]
include = [
    "domain*",
    "application*",
    "infrastructure*",
    "brokers*",
    "interface*",
    "config*",
    "datalake*",
    "analytics*",
    "tradex*",
    "runtime*",
]
exclude = [
    "tests*",
    "*.tests*",
    "venv*",
    "docs*",
    "scripts*",
    "examples*",
    "graphify*",
    "market_data*",
    "analytics_cache*",
    "runtime-dev*",
]

# ─── pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
# Library packages resolve from src/; repo root is needed for the `tests` package.
pythonpath = ["src", "."]
# Pyramid: tests/{unit,component,integration,e2e,architecture} plus package-local
# unit/component suites under src/**/tests (see tests/README.md).
# Full pyramid under tests/ (waves 1–3). No package-local src/**/tests.
testpaths = [
    "tests",
]
markers = [
    "unit: domain / pure business-rule tests",
    "component: single-service tests (OMS, execution, registry)",
    "architecture: architecture / boundary / import-linter guard tests",
    "golden: golden dataset / replay parity fixtures",
    "chaos: chaos / concurrency stress recovery tests",
    "contract: broker/module contract tests",
    "dhan: DhanHQ integration tests",
    "integration: tests that call external broker APIs",
    "sandbox: sandbox tests that may place and cancel orders",
    "live_readonly: live tests that must only read from real endpoints",
    "performance: latency and throughput benchmarks",
    "upstox: Upstox-specific unit tests",
    "upstox_integration: Upstox integration tests (gated by UPSTOX_INTEGRATION=1)",
    "upstox_sandbox: sandbox tests that may place and cancel orders",
    "upstox_live_readonly: live tests that must only read from real endpoints",
    "upstox_sdk_compat: SDK compatibility tests",
    "stress: long-running concurrency stress tests",
    "pre_prod: tests required on pre-prod gate (run only when PRE_PROD_GATE=1)",
    "regression: part of the Dhan regression suite; run with -m regression",
    "off_market_safe: live-readonly REST tests; safe to run outside NSE trading hours",
    "market_hours: WebSocket/streaming tests; require NSE 09:15-15:30 IST or FORCE_MARKET_OPEN=1",
    "auth_integration: live TOTP bootstrap and WebSocket reconnect regression (auto-skips without creds)",
    "cli_endpoint: offline subprocess smoke for a registered CLI endpoint",
    "cli_endpoint_live: live_readonly subprocess smoke — requires .env.local Dhan creds",
    "cli_endpoint_sandbox: sandbox order placement — requires DHAN_INTEGRATION=1",
    "paper_replay_parity: Paper trading ↔ Replay engine parity",
    "cross_broker_parity: Cross-broker data source parity",
    "certification: broker certification and CLI smoke tests",
    "live_backtest_parity: Live ↔ Backtest execution parity",
    "scanner_determinism: Scanner output determinism",
    "feature_parity: Feature computation parity across runs",
    "oms_integration: OMS and broker gateway integration tests",
    "memory: Memory profiling and leak detection tests",
    "e2e: End-to-end trading flow tests",
    "slow: tests that take longer than 1 second to execute",
    "live_orders: guarded real order placement (requires TRADEX_LIVE_ORDERS=1)",
    "property: property-based tests (hypothesis)",
    "component: component tests with mocked/doubled collaborators",
    "mutation: mutation testing (tests verify behavior, not implementation)",
    "real_broker: e2e tests that place/cancel on a real broker (never in default run)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Default run is offline-safe: exclude tests that require a live broker / network /
# credentials. Live suites stay runnable on demand with explicit -m markers.
addopts = "-ra --strict-markers --tb=short --durations=10 -m 'not live_readonly and not upstox_live_readonly and not off_market_safe and not market_hours and not auth_integration and not cli_endpoint_live and not live_backtest_parity and not live_orders and not sandbox and not upstox_sandbox and not cli_endpoint_sandbox and not dhan and not oms_integration and not integration and not upstox_integration and not real_broker'"

# Parity enforcement - register custom pytest plugin
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ─── coverage ─────────────────────────────────────────────
[tool.coverage.run]
source = [
    "brokers",
    "analytics",
    "interface",
    "datalake",
    "application",
    "domain",
    "infrastructure",
    "runtime",
    "tradex",
    "config",
]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true

# Mutation testing configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "brokers,analytics,datalake,domain,application,infrastructure"
mutation_operators = [
    "uop",
    "aod",
    "aor",
    "cos",
]
test_runner = "pytest tests/ -x -q"
timeout = 300  # 5 minutes per mutation
fail_under = 90  # 90% mutant kill rate required

# ─── mypy ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = [
    "tests/",
    "scripts/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = ["dhanhq.*", "textual.*", "rich.*", "upstox_client.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true

# ─── ruff ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".cache", "runtime", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "G",   # flake8-logging-format
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # function-call-in-default-argument (common in FastAPI/Django)
    "S101",  # assert (we use asserts in tests)
    "S104",  # hardcoded-bind-all-interfaces (we control the env)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B011", "TID251"]
"conftest.py" = ["S", "TID251"]
"scripts/**/*.py" = ["S", "E", "F", "TID251"]
"src/**/tests/**/*.py" = ["S", "TID251"]
"src/interface/ui/**/*.py" = ["TID251"]
"src/brokers/dhan/**/*.py" = ["TID251"]
"src/brokers/upstox/**/*.py" = ["TID251"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ─── Coding Standards ─────────────────────────────────────
# These rules enforce architectural invariants and team conventions.
# Layer boundary contracts live inline in [tool.importlinter] below.

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Domain types must come from domain, not broker-specific packages
"brokers.dhan.domain.Quote" = {msg = "Import Quote from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.Balance" = {msg = "Import Balance from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.DepthLevel" = {msg = "Import DepthLevel from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.MarketDepth" = {msg = "Import MarketDepth from domain, not from brokers.dhan.domain"}
"brokers.dhan.domain.Exchange" = {msg = "Import Exchange from domain.market_enums, not from brokers.dhan.domain"}
"brokers.dhan.domain.InstrumentType" = {msg = "Import InstrumentType from domain.market_enums, not from brokers.dhan.domain"}
"brokers.dhan.domain.OptionType" = {msg = "Import OptionType from domain.market_enums, not from brokers.dhan.domain"}
# Lower layers cannot import from the UI/CLI presentation package
"interface.ui" = {msg = "Lower layers (datalake, analytics, brokers) cannot import from interface.ui. Use entry points or events instead."}
"interface.api" = {msg = "Lower layers cannot import from interface.api. Use application ports or composition roots."}
# Cross-broker imports are forbidden
"brokers.dhan" = {msg = "Cannot import from brokers.dhan in brokers.common or other broker packages"}
"brokers.upstox" = {msg = "Cannot import from brokers.upstox in brokers.common or other broker packages"}
"infrastructure.gateway.factory.create_gateway" = {msg = "Use bootstrap_gateway or require_gateway via interface.ui.services.connect"}

# ─── Import Linter Contracts ──────────────────────────────
# Enforce architectural layer boundaries (REF-012).
# Single package root under src/:
#   PYTHONPATH="$(pwd)/src" lint-imports --config pyproject.toml
# CI pins PYTHONPATH the same way (.github/workflows/ci.yml).

[tool.importlinter]
root_packages = [
    "domain",
    "brokers",
    "analytics",
    "datalake",
    "interface",
    "application",
    "infrastructure",
    "tradex",
    "runtime",
    "config",
]

[[tool.importlinter.contracts]]
name = "Domain independence"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = [
    "infrastructure",
    "brokers",
    "analytics",
    "datalake",
    "interface",
    "application",
    "tradex",
    "runtime",
    "config",
]

[[tool.importlinter.contracts]]
name = "Infrastructure independence"
type = "forbidden"
source_modules = ["infrastructure"]
forbidden_modules = ["brokers", "analytics", "interface", "application"]
# Layout moves leave some ignores unused; warn instead of aborting the suite.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Gateway factory is a composition root — it constructs broker gateways
    # via runtime.broker_builders (lazy import, never static broker dep).
    "infrastructure.gateway.factory -> runtime.broker_builders",
    # Thin re-export shim: composition root lives in runtime/ (may wire application).
    "infrastructure.broker_infrastructure -> runtime.broker_infrastructure",
]

[[tool.importlinter.contracts]]
name = "Analytics broker-adapter isolation"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]

[[tool.importlinter.contracts]]
# Blueprint Part 1 §5.1 D2: Trading must be usable (and testable) with zero
# strategies/scanners loaded — a scanner bug must never be able to affect
# order state. application.oms + application.execution are the concrete
# Trading-context modules today (see
# docs/architecture/trading-os/TRADING_OS_BLUEPRINT_V2.md Part 1 §4/§5).
# Risk lives in application.oms (no separate risk package).
# application.trading → analytics is allowed (orchestrator).
name = "Trading does not import Analytics (D2)"
type = "forbidden"
source_modules = ["application.oms", "application.execution"]
forbidden_modules = ["analytics"]

[[tool.importlinter.contracts]]
# D2 inverse: strategies/scanners must not reach into OMS/execution.
name = "Analytics does not import Trading OMS/execution (D2 inverse)"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["application.oms", "application.execution"]

[[tool.importlinter.contracts]]
name = "Broker common isolation"
type = "forbidden"
source_modules = ["brokers.common"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "analytics"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]

[[tool.importlinter.contracts]]
name = "Application broker isolation"
type = "forbidden"
source_modules = ["application"]
# brokers.common is a residual facade — application must use domain.capabilities
# (and domain.ports). Concrete brokers remain forbidden outside tests.
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "brokers.common"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]

[[tool.importlinter.contracts]]
name = "Analytics does not import interface presentation"
type = "forbidden"
source_modules = ["analytics"]
forbidden_modules = ["interface.ui", "interface.api"]
# Known residual: replay engine wires UI compose (lazy import) — fix under REF-6.
# grimp often does not see function-local imports; warn if ignore goes unused.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]

[[tool.importlinter.contracts]]
name = "Dispatcher broker isolation"
type = "forbidden"
source_modules = ["runtime.commands", "runtime.queries"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "brokers.common"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]

[[tool.importlinter.contracts]]
name = "Runtime does not import interface"
type = "forbidden"
source_modules = ["runtime"]
forbidden_modules = ["interface"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = []

[[tool.importlinter.contracts]]
name = "Runtime broker-implementation isolation"
type = "forbidden"
source_modules = ["runtime"]
# ADR-002: runtime is the ONLY layer permitted to touch concrete broker
# implementations. This contract makes that rule structurally enforced.
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper", "brokers.common"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # broker_infrastructure now routes via BrokerId enum (SM-10) and
    # BrokerPlugin.capabilities_loader (SM-02) — no direct broker imports remain.
    "runtime.broker_accessors -> brokers.paper",
    "runtime.broker_accessors -> brokers.dhan.**",
    "runtime.broker_accessors -> brokers.upstox.**",
    "runtime.broker_builders -> brokers.paper",
    "runtime.broker_builders -> brokers.dhan.**",
    "runtime.broker_builders -> brokers.upstox.**",
    "runtime.broker_builders -> datalake.gateway",
]

[[tool.importlinter.contracts]]
name = "Application infrastructure separation"
type = "forbidden"
source_modules = ["application"]
forbidden_modules = ["infrastructure"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Composer / services / OMS use domain.ports; infrastructure is wired at
    # runtime.composition.wire_domain_port_sinks (audit Phase 0 / F1).
]

[[tool.importlinter.contracts]]
name = "CLI broker-implementation isolation"
type = "forbidden"
source_modules = ["interface.ui"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]
# Composition-root edges are listed explicitly; unused ignore lines should not
# abort the whole contract suite after layout moves.
# Concrete broker types are resolved only via runtime.broker_accessors
# (composition root). UI modules re-export accessors and must not import
# brokers.dhan / upstox / paper by name (TOS-P5-002 / DR-B4).
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]

[[tool.importlinter.contracts]]
name = "API broker-implementation isolation"
type = "forbidden"
source_modules = ["interface.api"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]
ignore_imports = [
    # API orders go through tradex.session (composition root).
    "interface.api.routers.orders -> tradex",
]

[[tool.importlinter.contracts]]
name = "Tradex public API broker isolation"
type = "forbidden"
source_modules = ["tradex"]
forbidden_modules = ["brokers.dhan", "brokers.upstox", "brokers.paper"]
# tradex.session no longer imports any concrete broker by name; it routes
# registration through the composition root (runtime.broker_discovery) and
# resolves data/execution providers via infrastructure.adapter_factory — the
# same indirection used for dhan/upstox (DR-I6 / DR-B4). No broker is a
# sanctioned exception for tradex.
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
    # Transitive: tradex.session -> infrastructure.gateway.factory -> runtime.broker_builders -> brokers.*
    "tradex.session -> infrastructure.gateway.factory",
]

[[tool.importlinter.contracts]]
name = "UI uses connect shims not raw factory"
type = "forbidden"
source_modules = ["interface.ui"]
forbidden_modules = ["infrastructure.gateway.factory"]
unmatched_ignore_imports_alerting = "warn"
ignore_imports = [
]
